--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit>=1.29.0
+streamlit
+pandas
+numpy
 scikit-learn
-pandas>=2.0.3
-scikit-learn  # Critical fix
-numpy>=1.24.0
-tldextract>=3.4.0
-joblib>=1.2.0
+matplotlib
+seaborn
